v2.0.9
* fix bugs below
- need to enter password before charging or discharging
- maintain is suspended when choosing discharge to maintain percentage

* new feature
- recover maintain if charge/discharge target is higher than maintain percentage
- show what's new in the latest version when executing "battery update"
- add new command "battery changelog" to see what's new in the latest version
- solve the problem of needing to enter password when update

v2.0.8
- fix the problem that some actions are not included in valid_action list

v2.0.7
- fix a sever bug in calibration schedule
- merge the valid_action() function contributed by RaymondJSu

v2.0.6
- try to solve the issue that dischargings stop when less than 50% for some intel Macbook
- write all keys in charging/discharging control no matter it is Apple or Intel, but write only when the key exists
- modify get_charging_status() to judge solely by charge/discharge current
- modify maintain_is_running() and add calibrate_is_running()
- fix a bug that maintain percentage is not shown in calibrate notification
- in "battery status", replace smc charging with real charging status
- in "battery status", show calibration status if it is ongoing
- remove redundant "battery disable_daemon" and "battery remove_daemon"
- modify "battery uninstall" to clean all files and disable all daemons
- battery update add setting "force" to force update without checking version, used to checkout beta version
- add "battery beta_version" action to show current beta version
- show final version number when update is finished

v2.0.5
- add discharge to be used for some Intel Macs

v2.0.4
- Extend allowed week period to 12. User can schedule calibration on specified weekday every 1~12 weeks now
- Add month_period for schedule, allowing schedule calibration on one specified day every 1~3 months
- Add support of showing status and notification in traditional chinese with command "battery language [tw,us]"