@@ -2,6 +2,7 @@ v2.0.9
 * 修正問題
 - 充電或放電前頻繁被要求輸入密碼
 - 執行 battery maintain 若選擇放電至 maintain 百分比時, 放電完成後電池最佳化被暫停
+- battery uninstall 解除安裝未完全清除所有安裝檔案
 
 * 新增功能
 - 執行 battery charge/discharge, 若最後的百分比高於 maintain 百分比, 則電池最佳化會自動恢復
