@@ -52,6 +52,20 @@ fi
 sudo chown $calling_user $binfolder/smc
 sudo chmod 755 $binfolder/smc
 sudo chmod +x $binfolder/smc
+# Check if smc works
+check_smc=$(smc 2>&1)
+if [[ $check_smc =~ " Bad " ]] || [[ $check_smc =~ " bad " ]] ; then # current is not a right version
+	sudo cp $batteryfolder/dist/smc_intel $binfolder/smc
+	sudo chown $USER $binfolder/smc
+	sudo chmod 755 $binfolder/smc
+	sudo chmod +x $binfolder/smc
+	# check again
+	check_smc=$(smc 2>&1)
+	if [[ $check_smc =~ " Bad " ]] || [[ $check_smc =~ " bad " ]] ; then # current is not a right version
+		echo "Error: BatteryOptimizer seems not compatible with your MAC yet"
+		exit
+	fi
+fi
 
 echo "[ 4 ] Writing script to $binfolder/battery for user $calling_user"
 sudo cp $batteryfolder/battery.sh $binfolder/battery
